--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section id="Personal Information">
         <div class="container">
             <h3 class="text-center display">About Me</h3>
-            <hr>
+            <hr class="main">
             <div class="row">
                 <div class="col-lg-4 mb-4">
                     <div class="thumbnail">
@@ -59,7 +59,7 @@
     <section id="Education">
         <div class="container">
             <h3 class="text-center display">Education</h3>
-            <hr>
+            <hr class="main">
             <div class="row">
                 <div class="col-lg-6 mb-4">
                     <div class="card">
@@ -96,50 +96,78 @@
     <section id="gallery">
         <div class="container">
             <h3 class="display text-center">Projects</h3>
+            <hr class="main">
+            <div class="row">
+                <div class="col-lg-4 mb-4">
+                    <div class="thumbnail">
+                        <div class="image image2"></div>
+                    </div>
+                </div>
+                <div class="col-lg-8 mb-4">
+                    <h5 class="text-center">Random Topic Picker</h5>
+                    <p class="about-me-para">
+                        I developed a web application called "Random Topic Picker" for Writing Assessment Test(WAT) for MBA preparations.
+                        The entire web app is built on Express and node.js with a MongoDB database. As of now, you need to manually run the seeds to insert the 
+                        topics in the database, but I'm working on it! I used Bootstrap for the styling and method-override for manipulating HTTP requests.
+                        <br>
+                        <a href="https://github.com/deepakshisud/Random-Picker-Website" class="btn links" style="background:  rgb(255, 169, 183);">See More</a>
+                    </p>
+                </div>
+            </div>
+            <hr>
+            <div class="row">
+                <div class="col-lg-8 mb-4">
+                    <h5 class="text-center">Arduino Based Multimeter</h5>
+                    <p class="about-me-para">
+                        It is an integrated version of two types of meters. 
+                        The AVO meter for current, voltage and resistance and LC 
+                        meter is used to measure capacitance and resistance.IR remote is used to
+                        instruct which channel to execute. The output of each individual circuit is 
+                        displayed on the LCD screen.
+                        <br>
+                        <a href="https://github.com/deepakshisud/Arduino-Based-Multimeter" class="btn links" style="background:  rgb(255, 169, 183);">See More</a>
+                    </p>
+                </div>
+                <div class="col-lg-4 mb-4">
+                    <div class="thumbnail">
+                        <div class="image image3"></div>
+                    </div>
+                </div>
+            </div>
             <hr>
             <div class="row">
                 <div class="col-lg-4 mb-4">
-                    <div class="card h-100">
-                        <img class="card-img-top" src="https://lh3.googleusercontent.com/UXnCUU1Voae8MDWa_C2Vu6rPvjvecDGxne43FQHqxTxqSjvA7myjmnJGoH2TSr_XLQI011vF522iLxDgSRY3ANeSR57mpPCpYgjOEHanY6ymUeWpOnLbRN5t3plsQLECPyzWKkSFDkqv8HA3GaH85FChgrDQmRys4vzMOikltQyLA4H1XyPVOAUFFKVvtuCUAk6f1k9Q2_5zDScsK1T3P0RGON3jiqTH0c6X9n7CL1g0-vmms8GABpTUuOb6d7jsfHcZqptLlwkM56piwkJV4KfH8j5X-DIpeK8KVaErB66aoapCbu8hNtKfIX0x1tFBphxvKoofaG2CTrWoUvibIjO-AyENHDsDO9YnUiGeGMkdQPiMEn5E4U_MWu3RAHZrTbX2DSSvV9ZreP79FHGtsGMhsPukW7F60Wc0eJRIk8b1DTiKt-aOLZqyYtDI8WUiRkihp2jhf1u0mZxoA2rukO0DkrNmuYfr2_9ogq6tWs3m969ISThys2qUtFt2-v5T0e_RS4H_ZEO3cgAeVc6xE7S__ZlfZ0dGeAH4byLVhLUtACu11K4xZDstqxurNeVh2zKkVep-4LAF-AQ3tSOb1hQcSprAxHd5JV0k-sw_rueFcbd2T6m6E3Ba1osa98iLKPiSkwqXnDfE1uhhH6k54MBhsJjbhssgeMbdtwdv1R9dhRWqY8_l9b-cVwIBjg=w1001-h734-no?authuser=0" style="size: 200px;" alt="">
-                        <div class="card-body">
-                            <h5 class="card-title">Random Topic Picker</h5>
-                            <p class="card-text">I developed a web application called "Random Topic Picker" for Writing Assessment Test(WAT) for MBA preparations.
-                                The entire web app is built on Express and node.js with a MongoDB database. As of now, you need to manually run the seeds to insert the 
-                                topics in the database, but I'm working on it! I used Bootstrap for the styling and method-override for manipulating HTTP requests.
-                            </p>
-                            <a href="https://github.com/deepakshisud/Random-Picker-Website" class="btn btn-outline-success btn-small">Show me!</a>
-                            <a href="#" class="btn btn-outline-danger btn-small"><i class="far fa-heart"></i></a>
-                        </div>
+                    <div class="thumbnail">
+                        <div class="image image4"></div>
                     </div>
                 </div>
-                <div class="col-lg-4 mb-4">
-                    <div class="card h-100">
-                        <img class="card-img-top" src="https://github.com/deepakshisud/Arduino-Based-Multimeter/raw/master/Circuit.png"  style="size: 200px;" alt="">
-                        <div class="card-body">
-                            <h5 class="card-title">Arduino Based Multimeter</h5>
-                            <p class="card-text">It is an integrated version of two types of meters. 
-                                The AVO meter for current, voltage and resistance and LC 
-                                meter is used to measure capacitance and resistance.IR remote is used to
-                                instruct which channel to execute. The output of each individual circuit is 
-                                displayed on the LCD screen.
-                            </p>
-                            <a href="https://github.com/deepakshisud/Arduino-Based-Multimeter" class="btn btn-outline-success btn-small">Show me!</a>
-                            <a href="#" class="btn btn-outline-danger btn-small"><i class="far fa-heart"></i></a>
-                        </div>
-                    </div>
+                <div class="col-lg-8 mb-4">
+                    <h5 class="text-center">No-show Patient Analysis</h5>
+                    <p class="about-me-para">
+                        Predictive techniques used to develop
+                        and compare appointment no-show prediction models to better
+                        understand appointment adherence in general population.
+                        <br>
+                        <a href="https://github.com/deepakshisud/No-show-Paitent-analysis-" class="btn links" style="background:  rgb(255, 169, 183);">See More</a>
+                    </p>
+                </div>
+            </div>
+            <hr>
+            <div class="row">
+                <div class="col-lg-8 mb-4">
+                    <h5 class="text-center">Find-A-Place</h5>
+                    <p class="about-me-para">
+                        Fina-A-Place is a simple web service created using ExpressJS, Bootstrap,
+                        EJS and MongoDB Atlas. It is hosted on Heroku. Using Mapbox's APIs, it enables
+                        the user to find any place on the face of earth. You can also view all the last visited
+                        places in the form of a cluster map and can even see additional details about the place.
+                        <br>
+                        <a href="https://find-a-place.herokuapp.com/" class="btn links" style="background:  rgb(255, 169, 183);">See More</a>
+                    </p>
                 </div>
                 <div class="col-lg-4 mb-4">
-                    <div class="card h-100">
-                        <img class="card-img-top" src="https://github.com/deepakshisud/No-show-Paitent-analysis-/raw/master/Img/Age.png"  style="size: 200px;"  alt="">
-                        <div class="card-body">
-                            <h5 class="card-title">No-show Patient Analysis</h5>
-                            <p class="card-text">Predictive techniques used to develop
-                                and compare appointment no-show prediction models to better
-                                understand appointment adherence in general population.
-                            </p>
-                            <a href="https://github.com/deepakshisud/No-show-Paitent-analysis-" class="btn btn-outline-success btn-small">Show me!</a>
-                            <a href="#" class="btn btn-outline-danger btn-small"><i class="far fa-heart"></i></a>
-                        </div>
+                    <div class="thumbnail">
+                        <div class="image image5"></div>
                     </div>
                 </div>
             </div>
@@ -148,7 +176,7 @@
     <section id="achievements">
         <div class="container">
             <h3 class="display text-center">Experiences/ Achievements</h3>
-            <hr>
+            <hr class="main">
             <div class="row">
                 <div class="col-lg-4 mb-4">
                     <div class="card">
