--- a/index.html
+++ b/index.html
@@ -56,6 +56,40 @@
             </div>
         </div>
     </section>
+    <section id="Languages">
+        <div class="container">
+            <h3 class="text-center display">Languages</h3>
+            <hr class="main">
+            <div class="row">
+                <div class="col-lg-8 md-12 offset-2">
+                 <h6>JavaScript</h6>
+                 <div class="progress mb-3">
+                    <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+                  <h6>Express JS</h6>
+                  <div class="progress mb-3">
+                     <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                   </div>
+                   <h6>Azure</h6>
+                   <div class="progress mb-3">
+                      <div class="progress-bar" role="progressbar" style="width: 20%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <h6>C++</h6>
+                    <div class="progress mb-3">
+                       <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                     </div>
+                     <h6>Bootstrap</h6>
+                     <div class="progress mb-3">
+                        <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <h6>SQL | MongoDB</h6>
+                    <div class="progress mb-3">
+                       <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                   </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <section id="Education">
         <div class="container">
             <h3 class="text-center display">Education</h3>
@@ -94,7 +128,7 @@
         </div>
     </section>
     <section id="gallery">
-        <div class="container">
+        <div class="container my-3">
             <h3 class="display text-center">Projects</h3>
             <hr class="main">
             <div class="row">
