--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <link rel="stylesheet" href="index.css">
     <title>Deepakshi's Resume</title>
   </head>
-  <body>
-    <nav class="navbar navbar-light fixed-top" style="background: rgb(255, 169, 183);">
+  <body style="background-color: #F6F6F6;">
+    <!-- <nav class="navbar navbar-light fixed-top mb-5" style="background: rgb(255, 169, 183);">
         <div class="container">
             <a href="#" class="navbar-brand">Created with &#9829;</a>
         </div>
-    </nav>
-    <section id="Header" class="jumbotron text-center">
+    </nav> -->
+    <!-- <section id="Header" class="jumbotron text-center">
         <h1 class="display-4">Hello There!</h1>
         <div class="container">
             <p class="lead">
@@ -29,10 +29,10 @@
         <a href="https://www.linkedin.com/in/deepakshi-sood-27b386174" class="btn links" style="background:  rgb(255, 169, 183);">LinkedIn</a>
         <a href="https://twitter.com/DeepakshiSud" class="btn links" style="background:  rgb(255, 169, 183);">Twitter</a>
         <a href="https://medium.com/@deepakshisud" class="btn links" style="background:  rgb(255, 169, 183);">Medium</a>
-    </section>
-    <section id="Personal Information">
-        <div class="container">
-            <h3 class="text-center display">About Me</h3>
+    </section> -->
+    <section id="Personal Information" class="mt-5">
+        <div class="container mt-5">
+            <h3 class="text-center display mt-5">About Me</h3>
             <hr class="main">
             <div class="row">
                 <div class="col-lg-4 mb-4">
@@ -61,7 +61,7 @@
             <h3 class="text-center display">Languages</h3>
             <hr class="main">
             <div class="row">
-                <div class="col-lg-8 md-12 offset-2">
+                <div class="col-lg-6 md-12">
                  <h6>JavaScript</h6>
                  <div class="progress mb-3">
                     <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
@@ -78,14 +78,52 @@
                     <div class="progress mb-3">
                        <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                      </div>
+                     <h6>HTML | CSS</h6>
+                     <div class="progress mb-3">
+                        <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
                      <h6>Bootstrap</h6>
                      <div class="progress mb-3">
                         <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
+                    <h6>Git | Github</h6>
+                    <div class="progress mb-3">
+                       <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                   </div>
                     <h6>SQL | MongoDB</h6>
                     <div class="progress mb-3">
                        <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                    </div>
+                   <h6>R | RStudio</h6>
+                   <div class="progress mb-3">
+                      <div class="progress-bar" role="progressbar" style="width: 30%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="d-flex flex-row mt-3">
+                        <div class="col-4 mb-5 d-flex justify-content-around ml-5">
+                            <i class="fas fa-laptop-code fa-6x" style="color: gray;"></i>
+                        </div>
+                        <div class="col-8 d-flex justify-content-end">
+                            <p class="h2" style="color: rgb(236, 138, 154);">Full-Stack Development interests me the most</p>
+                        </div>
+                    </div>
+                    <div class="d-flex flex-row">
+                        <div class="col-4 mb-5 d-flex justify-content-around ml-5">
+                            <i class="fas fa-book fa-6x" style="color: gray;"></i>
+                        </div>
+                        <div class="col-8 d-flex justify-content-end">
+                            <p class="h2" style="color: rgb(236, 138, 154);">Academically also focused on Arduino-based projects</p>
+                        </div>
+                    </div>
+                    <div class="d-flex flex-row">
+                        <div class="col-4 mb-5 d-flex justify-content-around ml-5">
+                            <i class="fas fa-code fa-6x" style="color: gray;"></i>
+                        </div>
+                        <div class="col-8 d-flex justify-content-end">
+                            <p class="h2" style="color: rgb(236, 138, 154);">Currently learning API Developement and React</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
