--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>IcedBlackCoffee</title>
+        <title>Deepakshi's Resume</title>
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
@@ -16,7 +16,7 @@
                         <h2>Hello! I'm Deepakshi!</h2>
                         <h3>Thank you for taking the time to check out my portfolio website!</h3>
                         <hr>
-                        <a href="index2.html" class="btn btn-lg links" style="background: #E0EEE0">Show me!</a>
+                        <a href="index2.html" class="btn btn-lg links" style="background: #A6035D; color: white;">Show me!</a>
                     </div>
                 </div>
             </div>
