--- a/index2.html
+++ b/index2.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="index2.css">
     <title>Deepakshi's Resume</title>
   </head>
-  <body style="background-color: #F0FFF0;">
-    <!-- <nav class="navbar navbar-light fixed-top mb-5" style="background: rgb(255, 169, 183);">
+  <body style="background-color: black">
+    <!-- <nav class="navbar navbar-light fixed-top mb-5" style="background: #A6035D;">
         <div class="container">
             <a href="#" class="navbar-brand">Created with &#9829;</a>
         </div>
@@ -49,7 +49,7 @@
                         chat. I enjoy cooking delicious food and may open my cafe at some point.
                         <br>
                         <br>
-                        <a href="https://drive.google.com/file/d/1Nu8nGefJbRmpy0lV7t2-JSCbi1nQajQy/view?usp=sharing" class="btn links" style="background:  rgb(255, 169, 183);">Resume</a>
+                        <a href="https://drive.google.com/file/d/1Nu8nGefJbRmpy0lV7t2-JSCbi1nQajQy/view?usp=sharing" class="btn links" style="background:  #A6035D;">Resume</a>
                     </p>
 
                 </div>
@@ -105,7 +105,7 @@
                             <i class="fas fa-laptop-code fa-6x" style="color: gray;"></i>
                         </div>
                         <div class="col-8 d-flex justify-content-end">
-                            <p class="h2" style="color: rgb(236, 138, 154);">Full-Stack Development interests me the most</p>
+                            <p class="h2" style="color: #A6035D;">Full-Stack Development interests me the most</p>
                         </div>
                     </div>
                     <div class="d-flex flex-row">
@@ -113,7 +113,7 @@
                             <i class="fas fa-book fa-6x" style="color: gray;"></i>
                         </div>
                         <div class="col-8 d-flex justify-content-end">
-                            <p class="h2" style="color: rgb(236, 138, 154);">Academically also focused on Arduino-based projects</p>
+                            <p class="h2" style="color: #A6035D;">Academically also focused on Arduino-based projects</p>
                         </div>
                     </div>
                     <div class="d-flex flex-row">
@@ -121,7 +121,7 @@
                             <i class="fas fa-code fa-6x" style="color: gray;"></i>
                         </div>
                         <div class="col-8 d-flex justify-content-end">
-                            <p class="h2" style="color: rgb(236, 138, 154);">Currently learning API Developement and React</p>
+                            <p class="h2" style="color: #A6035D;">Currently learning API Developement and React</p>
                         </div>
                     </div>
                 </div>
@@ -134,7 +134,7 @@
             <hr class="main">
             <div class="row">
                 <div class="col-lg-6 mb-4">
-                    <div class="card">
+                    <div class="card", style="background-color: black" >
                         <img class="card-img-top" src="https://lh3.googleusercontent.com/UwDE9J9ZBL6EAWDLxoRDox_M_6mdtW_skCjIvQeKtXLOS8bYGNYo5sk_EDDSCP1oZHRSkYWxovh9BwoMwBJ7zrbgIW3-O9UkCJAsWxbKrNXyjIkw92ejPkCwtATXqFAiY8VN1FNRjQNoBpE0ghRYXQ2wKx8I_3d5ErABQvFv5zoDjDQuHKpTw8rDLr4iddhCe_WSJbWe5stLUpEbxWhci2cq-aY5DNVmlOwtFGb2pJIwpLgrGwXHzInJaGYLTQdVmZ2laUBrTzm-cWwsuC4eUn_gIlzGLpA-3wy0wNJEeOivMEqkUpRIdZJnG-whlbGA_3bjyko9mO0S8m6LzUwDuB1bOna9Zplp1xqf_6v0H7qb66Pc58a9QI7UgKA9Bfrv6Sp9Bn03gE6QNQPDcok57xfOy7aH_eD018bW-vHGQkxmNp_M948G2Byh_r7dn5c3FE0MJUikHGrjrCnPsoINv2R_1Tswc0D3sLrgO2nDnBBfWk_MpBpAb9kRfl5gqz-FceJfXqW3Bg68Tzw1fs2_IoPKlBxWHfdqWnd9WDrC5_v7Kb33uJz8TCxivGkNcIlBnmmFQRymqvBLg3WK4Z5h3uZOPn5hqoiW0VLciroNyKcI5UMJP7rFNJpLskvXT5wh8X8YhqSlUC70N5C-jVBwqWXPtxUEoqnoeFx6Gx8wbAgV8sq-PUPgFyd9_tZ1PQ=s903-no?authuser=0" style="size: 10px;" alt="">
                         <div class="card-body">
                             <h5 class="card-title">Mount Carmel Sr. Sec. School, Palampur</h5>
@@ -148,7 +148,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 mb-4">
-                    <div class="card h-100">
+                    <div class="card h-100" , style="background-color: black" >
                         <img class="card-img-top" src="https://lh3.googleusercontent.com/-RWeeAQTUPp9-xwGpkht9k2kwOwEjHiW_P5GCm2Jx9an-Kvi-mUuhwT8G1SdRQS6xh2aJ6YDnpqfD1tMBIer_YMV_T47ggCe6zB0NKSheUWLHgAjKm4y8fkKuXiw7FY2ambyO27DKEZItxyH1reUCiOeo98mkqTIXjRo4k1nmbHVqaGKVI6I9-3yX150rtwiFjmRv-W9ry1TIM-C_R2kmovfga5ZezYPt33b5qhXeeD3K-b-GEmlhoq2D82-XTAJGJXaiev6NJ5jf-G-QrSZezFNqgd8B1W5veNOHmpSlkgSMCBczENpc3x86AIaqICbBK8pB8tV8JVJROtP2YKnNILy_tj6tPmnhP48xMqisYkozOGMFMxcXpIgnXYrIFDwLAZW6JqFNamae-pUgbBPOOEgS4ncCxR-_vozgoGYo4LiyXxjjMcR7e0pgyirkBathp_ZALR4UgbgLcNyHy0crkbwnjNWEs58pohAy__YF_lxOL0il0PaWfifJZl1BwSbcSc6Ssh0fRyG_aUOe7yLCqyAaSTC-YKv1_Nma5ZDF8FanpHnALx8svF_SV2nqOuhOmXkBhu_5Y-ubGzs3aQaNkM3oJLgxB-Eiui31T3P8D3yfuJwBcG0wetdSnIR3VywfX6diaYkKLgXBc6Hng321FQ5dNiMygqxydU9mXLPQr1F3LPdK1Je3nmFZ7KRhw=s873-no?authuser=0" style="size: 10px;" alt="">
                         <div class="card-body">
                             <h5 class="card-title">Vellore Institute of Technology, Chennai</h5>
@@ -182,7 +182,7 @@
                         The entire web app is built on Express and node.js with a MongoDB database. As of now, you need to manually run the seeds to insert the 
                         topics in the database, but I'm working on it! I used Bootstrap for the styling and method-override for manipulating HTTP requests.
                         <br>
-                        <a href="https://github.com/deepakshisud/Random-Picker-Website" class="btn links" style="background:  rgb(255, 169, 183);">See More</a>
+                        <a href="https://github.com/deepakshisud/Random-Picker-Website" class="btn links" style="background:  #A6035D;">See More</a>
                     </p>
                 </div>
             </div>
@@ -197,7 +197,7 @@
                         instruct which channel to execute. The output of each individual circuit is 
                         displayed on the LCD screen.
                         <br>
-                        <a href="https://github.com/deepakshisud/Arduino-Based-Multimeter" class="btn links" style="background:  rgb(255, 169, 183);">See More</a>
+                        <a href="https://github.com/deepakshisud/Arduino-Based-Multimeter" class="btn links" style="background:  #A6035D;">See More</a>
                     </p>
                 </div>
                 <div class="col-lg-4 mb-4">
@@ -220,7 +220,7 @@
                         and compare appointment no-show prediction models to better
                         understand appointment adherence in general population.
                         <br>
-                        <a href="https://github.com/deepakshisud/No-show-Paitent-analysis-" class="btn links" style="background:  rgb(255, 169, 183);">See More</a>
+                        <a href="https://github.com/deepakshisud/No-show-Paitent-analysis-" class="btn links" style="background:  #A6035D;">See More</a>
                     </p>
                 </div>
             </div>
@@ -234,7 +234,7 @@
                         the user to find any place on the face of earth. You can also view all the last visited
                         places in the form of a cluster map and can even see additional details about the place.
                         <br>
-                        <a href="https://find-a-place.herokuapp.com/" class="btn links" style="background:  rgb(255, 169, 183);">See More</a>
+                        <a href="https://find-a-place.herokuapp.com/" class="btn links" style="background:  #A6035D;">See More</a>
                     </p>
                 </div>
                 <div class="col-lg-4 mb-4">
@@ -251,7 +251,7 @@
             <hr class="main">
             <div class="row">
                 <div class="col-lg-4 mb-4">
-                    <div class="card">
+                    <div class="card", style="background-color: black" >
                         <img class="card-img-top" src="https://lh3.googleusercontent.com/jd3Dz_1P6jBn26ekgOX4ofRWAIspmcw5Pbc69T6zSiH3jPC3zmx3zFzs6cX7KxYQ8Gmjt5lnC5lFksMcWcqYsivV7iCTdduu2ikNkIemhxxx2qU43MPHJaWviaa8A9dMTLfKpTOWLGVVuL58fNkLSXQqZz-3MW1Oj4grJTDnV4sH9ZzJsuhGbztlCB3VNxcGQ7YAp4JxVCTMMMKaYrgPHOwCq6LxHXf_rR5I8tjUq-K3HM0njQZdQutewKL_gHOx3JY4Uy61Nuimtq4ys1K6WX22-TNs8sfygBVhQvfTxXzNw_kg5BVofEeiU--WZtO17IH51U5YCk8gHP7iOpyyKtAjYTRDVJkm1_F_St7VceOFbgEVd8x19Wk4ssyZmXnj1XZwvy58f173IuYQ7zIhAGt2aDYL0wbx0rtzgUIwXuAD0N1kbuujmS6LOLAvC00GTDnBGRC3doHdbDkjdIg4LKGc4XBEv39M6Fed9--jtPQ_c4ZpiyyEyQnJgazYFooNnf9DEpkN2-Kbad62pKtOtJcptm3wWZEFXHlbzpuEUJ7cRtpI4MAHrT_eZVVAGNLxgvKZAidg0J5rRKSBeL5lBlog2j39OHj_Ly_JvSeMxsKp__HlDIzVDv_7vxD4e_Dqmz8jdQsYVT9L_BOvGYtHf_3Bm_KNYCIVqKHbWbPQkmVEH5-rs4OIWxMYlVQnug=w1130-h873-no?authuser=0" style="size: 200px;" alt="">
                         <div class="card-body">
                             <h5 class="card-title">Microsoft Learn Student Ambassador</h5>
@@ -265,7 +265,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 mb-4">
-                    <div class="card">
+                    <div class="card", style="background-color: black" >
                         <img class="card-img-top" src="https://lh3.googleusercontent.com/4V9U4tyupRPbkBAqAQbtAbyXrGscWflHsoqGhWPoV_eNjOzutvdNGKaJuJX0W1dzrZcgKRJ2fBuS_auZZldPWdSwlVJTho707XoZkRSTT5q5IKZQ-F8EFjx-uLk6ynOF_kQKUjnWVPLC4dSaJeWphspsop7Q-7a-YOGOKMFFQsgLM2lughjhryNviluZ_fW-iAGYE3J_dXO9Xr-Kk0EiiLpJoEau9y4BbW2CmuVNUJgSMclC3joDRCmG84MJ0XGtJ_M9A7s2Jy27-7ZcfOPUrd_xOXmOMo_xLxlF0_fTZc2OzSTlWHyJSZshvkAvFV-_9ckmua5_7HBtqpjBm1N_U8aHU0RnXlx-ML2-khbZl-k3FVxoGoz9UxexYacGKU7Mavt9ArjrweflHP1nQQ1FY_LCt1ZK0KQ0SWCeT5JagG9UO79i92L8-PNIL7RfIwNIVj9NSIqgUYTHt6krSAMMapxBxS-_PRajHwHAkA56TGLSNcWDmLGVVB99RHVw62R6Y_4TiVLmebSSTieYzgQG1cQRHKf5rih3JMxjGsrLh1Gip5qumD_8BywQ2WnrlHLXPzFZU0ytfMUHuZV6-Own2hoVARartdaVgqKNBB25WETsHdMIxizYh5vETrvKmTKdzWSyG0NxH34d1CapJpLCjspH0flqJUUq7c9wpfg9ldlOy8hrL4dd8kPMvSXsiA=s180-no?authuser=0"  style="size: 50px;" alt="">
                         <div class="card-body">
                             <h5 class="card-title">Microsft Technical Certified - Azure Fundamentals</h5>
@@ -276,7 +276,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 mb-4">
-                    <div class="card">
+                    <div class="card", style="background-color: black" >
                         <img class="card-img-top" src="https://lh3.googleusercontent.com/qbDaZSRtxtXLDxauupGj6V-eq6KXDrAdm29lw0L-t7LvPea-0CmlZu9Ymt_RwVyDezyEi-r4JNoeDN6H6mkQ0NkSUmsJQQtluWlGUouTUd36V8JS67OI4du2hqQMvD20swxDIpxCdIi73Q6zxnlj4fFp-S2jvFtaMdqhBgX9UAkWkGAQj7PDTREyL7M31sYs_Qip0jZzvF3tUsmA42KTnj2SzM-BPlEzc7U_xmT_tGWbLwmf4vsCnuJIN-3tlFV2duwseZcaPYZbZPq9h2IHZqj4l69uMPq3EKuddjVisVyGOPS1xK95lJ-LQRhdt2owg6mjx4GSGBMfpOCmLuwjGZ70xi8AydKJKvqvYHpjA0MIXZ6KZ5_b87535QC4PzyVlIN_xoi6CWjohXyXvl0YU6rSPpZ4KmxKQDLTVVbFo9QjNdrsO73XSRBWGdx9u2j8jn3EgHN7wcnpZJFz7JqDd60WAMBTxRILCBqpN5mTXH87PpdIEcOlBLH_4WQ7zinDTcYnNhE-FJltqVTuKN8r8P3k1HsTmOejpG4RfnnWZFYU3OgKb8tRhIIG0asx016knPzShiq7-3ksEZ1W2obp7zq4ObdupTOO7yYTASym5V1qv_4kTarC_gUEq46sgPeAHCGAa2BjwNWaa9sOz8ZjqoQ6Xm0pLmFAArQ0NyHeLh3Tt91Mihrs8P9M8FJzbw=w581-h574-no?authuser=0"  style="size: 200px;"  alt="">
                         <div class="card-body">
                             <h5 class="card-title">Management Lead - Microsoft Innovations Club</h5>
@@ -297,7 +297,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 mb-4">
-                    <div class="card">
+                    <div class="card", style="background-color: black" >
                         <img class="card-img-top" src="https://lh3.googleusercontent.com/0HeSGvb6k-yHBI-ywWbF-PKT61yKQ9gu3HEPl55MUnKf-skzGtXOrG4ksIHq2fsOTUgMmMKF8wbbVGYzz_a2lZGxaZHqalhep8hwDiRvEzIHlk35gMPGPjmxyomCCLyoQKXk9tYfe6Zdr60TANwQMvLMofPO4sFjnfNEyfErqVNs0YmM6j6DRsXaSTev__PKgSvZO9chaQBBQJ_0naOgVx2BVaN7Viv6mtKs2PlPUhx2lgzVoa5L59vJeFQXRP2QCpvkWdty8dv8zG-Mda10u7_lnhq1ck9iN8hg7RaSlLHhtxFa9eITTVGLcqE3CINS3GxMn1X7oiojuj7mJrVQsjCwu2_n-ChcNNXET5BYDiQyHN-Jxk6WhqhX8EOcmhFqlM0xThUEsNPt5Sdf9TOBCu9Vay4A__IoFTV5X6UpIZE5jxlUfuv6uPvLpEr0lGCbfLwiuowhUx0Oo0ppOQqGyK0ICeJMUVc4Ax-3qU9N2x-Yi8zm3HmNPNxlDF7xrhTzbqEMa0b2J4MP7SOX-mwhPstHDHRTdqEZO-TjrspIWaAr1ZMFjzMqeD8DpWpl-zTMPhMJLNQLCRcC2WC_xQDR9k2c7_WXA_6hUlErfQloLomOsMzbiJ3SZmRZOLP-J39fofj-2ZGnKZUwCp6Rt0FbtgvPnDvvby__oIWYZEVNimu298On9GbnltRpPAVWHg=w1267-h873-no?authuser=0" style="size: 200px;" alt="">
                         <div class="card-body">
                             <h5 class="card-title">Branch Rank - 6</h5>
@@ -310,7 +310,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 mb-4">
-                    <div class="card">
+                    <div class="card", style="background-color: black" >
                         <img class="card-img-top" src="https://lh3.googleusercontent.com/e9kOjdYoSyzI-5NET3LD_nvJ2ozF-3TKRHUT1IE3K6cbFBvtwEnfVzR0bITNeb6edFinDe3jj-gXWo6hNvlexyOkh5yOdVI2q6pRUcFV6TKpDW7TCBkB4_l8B7b5qlz-soN-TtKMCI2GnakPfolRKUBc69NSLbokpZYZEv81k2XhTztolfPrnxqsbpRlxlr1RBIxX0qZPRT0UIdhtkqmu5IJv9p651rxa6RhT-pCR5BynBPiDmrcBOD6wY9vWoJyMiuL8P4Dwii5fa_DVhhsBB3wz_FgIpnADSP9cRW3413REAdDeqco_QFGpLWyA2AwLRNKGyvBID0oNDg3WAm0b6jFknf4FoA0jBEsdLzntXyJuaEHUwzI2qdfY3wArvB4dALbPNLTUg1SGteNO2nLSZijT-i77_rGW6_8TWCUByvhpl_cxsI2db8Db5rkGd1y9qbYXfOiEz-T0EhulbZzo-LSLbmFRCTP2egpjI3phqBE5JF7x4ZWnVvMCADwSU_zL3onuGOsM7k4Z4_-cpilhjt7c3xEkR2RqOJT-7Lu4jNJzIovHiKW5pyavQKwnJVoATna_c1RoCrXH7F0lNQ62aRQHd-mboz9sk4Nqo0-t4K69ICm-bt8nN2BuZuU9KOYbrTk94sybW0uoo4Fy1HB7XjnkweUiEeaUTm3oQfJdFA-m4pAOqao90wXrIsDsg=w1522-h873-no?authuser=0"  style="size: 200px;" alt="">
                         <div class="card-body">
                             <h5 class="card-title">Samsung PRISM Student</h5>
@@ -324,7 +324,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 mb-4">
-                    <div class="card">
+                    <div class="card", style="background-color: black" >
                         <img class="card-img-top" src="https://lh3.googleusercontent.com/Lh5m6J-SpzaXJxgda_K61hdlgFyDn2_AO6-vFpssOeNbXbYv_SN8xLxCVjc_woiGjeH49fhZwDAVqZqVPkA2DODLLI72FppaJRXYL4XUUuA8W7YXpusSnV5V6RjkAzpkHqfkluoe91jnv-GbS0RxN_knNzFZlH96qHO_oTHZK9K3_eBy6KiHlZ59xA3RytdYj-AY3Oy0ZBEX4uBiCzfRi15lI-c2vOEySDWszpWpbd-ME70eII_WJjSNJpaIrIkCm2Jh96NFt4mITWXbG_bXKM-kuPa51XsjsZ9QOXhf43A9fMT7mMMR8PJeWmYwR0LUArMBPoDjyK9skHF1g4ihH38tIVBQECIhDiVqo3f90mqbZJt-esrbhtBHIUxg8AW7CVsIcblKn6NQWIzz8h9e4ibs6SWy_pmVTcWdSjvyq7i_xOIflmCb1dG0rM4CofCSuRlx1NfHy9JpdqUA0j0xbxQPEHNT1PpLWqWefdIzX8JmQkoV6AxMbufXTv0ftRkCClMDnh_5KjTau0_SrYxVgVk__YNilEwOrT9NS2lxTJ5IFHNM-6Ipu_BX9lcpQfeXQP7izHZdI29jvT7GTMPQOfdHtm0lYAmNPUWM8gCEnIEy2nkimHgwdz9gw3drDv1vJYmDFHzllBgPZxZ3LieKNEeq6xI8e5HTAH4WZ7FdtFNPaa6MnZdnbKFgkiOn8w=w1280-h624-no?authuser=0"  style="size: 200px;"  alt="">
                         <div class="card-body">
                             <h5 class="card-title">JP Morgan - Code for Good</h5>
