--- a/index.html
+++ b/index.html
@@ -1,25 +1,75 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Deepakshi's Resume</title>
-        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
-        <link rel="stylesheet" href="index.css">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
-    </head>
-    <body>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div id="content">
-                        <h2>Hello! I'm Deepakshi!</h2>
-                        <h3>Thank you for taking the time to check out my portfolio website!</h3>
-                        <hr>
-                        <a href="index2.html" class="btn btn-lg links" style="background: #A6035D; color: white;">Show me!</a>
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
+    <link rel="stylesheet" href="index.css">
+    <title>Deepakshi's Resume</title>
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light mt-2" style="background-color: white;">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="#">Deepakshi</a>
+            </li>
+        </ul>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Education</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Experience</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Blogposts</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    <div class="container">
+        <div class="row main mt-5">
+            <div class="d-flex flex-column mt-5 col-12">
+                <div class="bd-highlight"><p>#welcome</p></div>
+                <div class="bd-highlight"><h1>DEEPAKSHI SOOD <br>
+                Student & Developer
+                </h1></div>
+                <hr>
+            </div>
+            <div class="col-lg-8 col-sm-12 mt-5">
+                <p>about me</p>
+                <p> I describe myself as an enthusiastic individual with a never-ending quench for learning. 
+                    I am intrigued by technology and enjoy working with new teams and always look for opportunities 
+                    to expand my knowledge. I am interested in Web Developement, SQL, PowerBI, Analytics, Competitive Programming, 
+                    Data Structures, Blogging. In my spare time, I like to read fictional novels. I am always up for a good women-empowerment 
+                    chat. I enjoy cooking delicious food and may open my cafe at some point.</p>
+            </div>
+            <div class="col-lg-4 col-md-12 mt-5"> 
+                <div class="d-flex flex-row mt-3">
+                    <div class="col-12 mb-5 d-flex justify-content-start">
+                        <i class="fas fa-print fa-4x"></i>
+                        <p class="ml-5 d-flex align-items-end">Resume</p>
+                    </div>
+                </div>
+                <div class="d-flex flex-row">
+                    <div class="col-12 mb-5 d-flex justify-content-start">
+                        <i class="fab fa-github fa-4x"></i>
+                        <p class="ml-5 d-flex align-items-end">Resume</p>
                     </div>
                 </div>
             </div>
+            <div class="col-lg-12 col-md-12">
+                <p>my skills</p>
+            </div>
         </div>
-    </body>
+    </div>
+</body>
 </html>
