--- a/index.html
+++ b/index.html
@@ -62,12 +62,65 @@
                 <div class="d-flex flex-row">
                     <div class="col-12 mb-5 d-flex justify-content-start">
                         <i class="fab fa-github fa-4x"></i>
-                        <p class="ml-5 d-flex align-items-end">Resume</p>
+                        <p class="ml-5 d-flex align-items-end">Github</p>
                     </div>
                 </div>
             </div>
             <div class="col-lg-12 col-md-12">
                 <p>my skills</p>
+                <div class="d-flex flex-row">
+                  <div class="col-12 mb-2 d-flex justify-content-around mt-3">
+                      <i class="fas fa-laptop-code fa-4x"></i>
+                      <i class="fas fa-book fa-4x"></i>
+                      <i class="fas fa-code fa-4x"></i>
+                  </div>
+                </div>
+                <div class="d-flex flex-row">
+                  <div class="col-12 mb-5 d-flex justify-content-around">
+                      <p>Web development</p>
+                      <p>Something</p>
+                      <p>Something</p>
+                  </div>
+                </div>
+                <div class="d-flex flex-row">
+                  <div class="col-lg-6 col-sm-12">
+                    <p>Javascript</p>
+                    <div class="progress mb-3"  style="width: 50%;">
+                      <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <p>Express JS</p>
+                    <div class="progress mb-3" style="width: 50%;">
+                      <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <p>HTML | CSS</p>
+                    <div class="progress mb-3" style="width: 50%;">
+                      <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <p>C++</p>
+                    <div class="progress mb-3" style="width: 50%;">
+                      <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                  </div>
+                  <div class="col-lg-6 col-sm-12">
+                    <p>Javascript</p>
+                    <div class="progress mb-3"  style="width: 50%;">
+                      <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <p>Express JS</p>
+                    <div class="progress mb-3" style="width: 50%;">
+                      <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <p>HTML | CSS</p>
+                    <div class="progress mb-3" style="width: 50%;">
+                      <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <p>C++</p>
+                    <div class="progress mb-3" style="width: 50%;">
+                      <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                  </div>
+                </div>
+
             </div>
         </div>
     </div>
