--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="index.css">
     <title>Deepakshi's Resume</title>
   </head>
-  <body>
+  <body class="fill">
     <nav class="navbar navbar-expand-lg navbar-light mt-2" style="background-color: white;">
         <ul class="navbar-nav">
             <li class="nav-item">
@@ -56,56 +56,18 @@
                 <div class="d-flex flex-row mt-3">
                     <div class="col-12 mb-5 d-flex justify-content-start">
                         <i class="fas fa-print fa-4x"></i>
-                        <p class="ml-5 d-flex align-items-end">Resume</p>
+                        <p class="ml-5 d-flex align-items-end"><a href="https://drive.google.com/file/d/14imZXdOOpq5PezducYnRqaC8ZL9xdjmB/view?usp=sharing"> Resume</a></p>
                     </div>
                 </div>
                 <div class="d-flex flex-row">
                     <div class="col-12 mb-5 d-flex justify-content-start">
                         <i class="fab fa-github fa-4x"></i>
-                        <p class="ml-5 d-flex align-items-end">Github</p>
+                        <p class="ml-5 d-flex align-items-end"><a href="https://github.com/deepakshisud"> Github</a></p>
                     </div>
                 </div>
             </div>
             <div class="col-lg-12 col-md-12">
                 <p>my skills</p>
-                <div class="d-flex flex-row">
-                  <div class="col-lg-6 col-sm-12">
-                    <p>Javascript</p>
-                    <div class="progress mb-3"  style="width: 50%;">
-                      <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <p>Express JS</p>
-                    <div class="progress mb-3" style="width: 50%;">
-                      <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <p>HTML | CSS</p>
-                    <div class="progress mb-3" style="width: 50%;">
-                      <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <p>C++</p>
-                    <div class="progress mb-3" style="width: 50%;">
-                      <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                  </div>
-                  <div class="col-lg-6 col-sm-12">
-                    <p>Javascript</p>
-                    <div class="progress mb-3"  style="width: 50%;">
-                      <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <p>Express JS</p>
-                    <div class="progress mb-3" style="width: 50%;">
-                      <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <p>HTML | CSS</p>
-                    <div class="progress mb-3" style="width: 50%;">
-                      <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <p>C++</p>
-                    <div class="progress mb-3" style="width: 50%;">
-                      <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                  </div>
-                </div>
                 <div class="d-flex flex-row">
                   <div class="col-12 mb-2 d-flex justify-content-around mt-3">
                       <i class="fas fa-laptop-code fa-4x"></i>
@@ -116,11 +78,91 @@
                 <div class="d-flex flex-row">
                   <div class="col-12 mb-5 d-flex justify-content-around">
                       <p>Web development</p>
-                      <p>Something</p>
-                      <p>Something</p>
+                      <p>Arduino IOT</p>
+                      <p>Cloud Computing</p>
                   </div>
                 </div>
-
+                <div class="row">
+                  <div class="col-lg-6 col-sm-12 d-flex flex-column justify-content-around align-items-end">
+                    <p>Javascript</p>
+                    <div class="progress mb-3"  style="width: 70%;">
+                      <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <p>Express JS</p>
+                    <div class="progress mb-3" style="width: 70%;">
+                      <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <p>HTML | CSS</p>
+                    <div class="progress mb-3" style="width: 70%;">
+                      <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <p>C++</p>
+                    <div class="progress mb-3" style="width: 70%;">
+                      <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                  </div>
+                  <div class="col-lg-6 col-sm-12">
+                    <p>Git/Github</p>
+                    <div class="progress mb-3"  style="width: 70%;">
+                      <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <p>Mongoose</p>
+                    <div class="progress mb-3" style="width: 70%;">
+                      <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <p>Bootstrap</p>
+                    <div class="progress mb-3" style="width: 70%;">
+                      <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <p>EJS</p>
+                    <div class="progress mb-3" style="width: 70%;">
+                      <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                  </div>
+                </div>
+            </div>
+            <div class="col-lg-12 col-md-12">
+              <p>my projects</p>
+              <div class="card-group">
+                <div class="card" style="width: 18rem;">
+                  <img src="images/Find-a-place.PNG" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                  <img src="images/Random-topic-picker.PNG" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                  <img src="images/Snakegame.PNG" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="card-group">
+                <div class="card" style="width: 18rem;">
+                  <img src="images/Arduino-based-multimeter.png" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                  <img src="images/breakout-game.PNG" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                  <img src="images/ArrowOS.png" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  </div>
+                </div>
+              </div>
             </div>
         </div>
     </div>
