--- a/index.html
+++ b/index.html
@@ -124,42 +124,52 @@
             <div class="col-lg-12 col-md-12">
               <p>my projects</p>
               <div class="card-group">
-                <div class="card" style="width: 10rem;">
+                <div class="card" style="width: 18rem;">
                   <img src="images/Find-a-place.PNG" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <p class="card-text">A web service created using ExpressJS, Bootstrap,
+                      EJS and MongoDB Atlas. It is hosted on Heroku. Using Mapbox's APIs, it enables
+                      the user to find any place on the face of earth.</p>
                   </div>
                 </div>
-                <div class="card" style="width: 10rem;">
+                <div class="card" style="width: 18rem;">
                   <img src="images/Random-topic-picker.PNG" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <p class="card-text">A web application for Writing Assessment Test(WAT) for MBA preparations.
+                      Built on Express and node.js with a MongoDB database.</p>
                   </div>
                 </div>
-                <div class="card" style="width: 10rem;">
+                <div class="card" style="width: 18rem;">
                   <img src="images/Snakegame.PNG" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <p class="card-text">A web based Snakegame made using core Javascript and HTML Canvas. Styled using Bulma
+                      framework
+                    </p>
                   </div>
                 </div>
               </div>
-              <div class="card-group">
-                <div class="card" style="width: 10rem;">
+              <div class="card-group mt-5">
+                <div class="card" style="width: 18rem;">
                   <img src="images/Arduino-based-multimeter.png" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <p class="card-text">An integrated version of the AVO meter for current, voltage and resistance and LC 
+                      meter to measure capacitance and resistance.</p>
                   </div>
                 </div>
-                <div class="card" style="width: 10rem;">
+                <div class="card" style="width: 18rem;">
                   <img src="images/breakout-game.PNG" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <p class="card-text">A web based Breakout Game made using core Javascript and HTML Canvas. Styled using Bulma
+                      framework</p>
                   </div>
                 </div>
-                <div class="card" style="width: 10rem;">
+                <div class="card" style="width: 18rem;">
                   <img src="images/ArrowOS.png" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <p class="card-text">A command-line Operating System built in Visual Studios using Cosmos Development Kit
+                      consisting File System and Calculator and can perform operations like Reboot, display 
+                      Date & Time, System Lock.
+                    </p>
                   </div>
                 </div>
               </div>
