--- a/index.html
+++ b/index.html
@@ -174,6 +174,55 @@
                 </div>
               </div>
             </div>
+            <div class="col-lg-12 col-sm-12 mt-5">
+              <p>my experience and contributions</p>
+            </div>
+            <div class="col-lg-10 col-sm-12 pr-0">
+              <p>Microsoft Learn Student Ambassador</p>
+              <p> I have been a part of the MLSA community for over an year. I have attended over 25 events and hosted them as well. These include Microsft Student Ambassador Summit, Imagine Cup, Microsoft Ignite.</p>
+            </div>
+            <div class="col-lg-2 col-md-12 mt-3 px-0"> 
+              <div class="d-flex flex-row">
+                  <div class="col-12  d-flex justify-content-start align-items-start">
+
+                      <div class="image1 mlsa"></div>
+                  </div>
+              </div>
+            </div>
+          <div class="col-lg-2 col-md-12 px-0"> 
+            <div class="d-flex flex-row">
+                <div class="col-12 d-flex justify-content-start align-items-start">
+                    <div class="image2 jpmorgan"></div>
+                </div>
+            </div>
+          </div>
+          <div class="col-lg-10 col-sm-12 pl-0 mt-4">
+            <p class="text-right">Microsoft Learn Student Ambassador</p>
+            <p class="text-right"> I have been a part of the MLSA community for over an year. I have attended over 25 events and hosted them as well. These include Microsft Student Ambassador Summit, Imagine Cup, Microsoft Ignite.</p>
+          </div>
+          <div class="col-lg-10 col-sm-12 pr-0">
+            <p>Microsoft Learn Student Ambassador</p>
+            <p> I have been a part of the MLSA community for over an year. I have attended over 25 events and hosted them as well. These include Microsft Student Ambassador Summit, Imagine Cup, Microsoft Ignite.</p>
+          </div>
+          <div class="col-lg-2 col-md-12 px-0"> 
+            <div class="d-flex flex-row">
+                <div class="col-12 d-flex justify-content-start align-items-start">
+
+                    <div class="image2 prism"></div>
+                </div>
+            </div>
+          </div>
+          <div class="col-lg-2 col-md-12 px-0"> 
+            <div class="d-flex flex-row">
+                <div class="col-12 d-flex justify-content-start align-items-start">
+                    <div class="image1 mic"></div>
+                </div>
+            </div>
+          </div>
+          <div class="col-lg-10 col-sm-12 pl-0 mt-4">
+            <p class="text-right">Microsoft Learn Student Ambassador</p>
+            <p class="text-right"> I have been a part of the MLSA community for over an year. I have attended over 25 events and hosted them as well. These include Microsft Student Ambassador Summit, Imagine Cup, Microsoft Ignite.</p>
+          </div>
         </div>
     </div>
 </body>
