--- a/index.html
+++ b/index.html
@@ -83,41 +83,36 @@
                   </div>
                 </div>
                 <div class="row">
-                  <div class="col-lg-6 col-sm-12 d-flex flex-column justify-content-around align-items-end">
-                    <p>Javascript</p>
-                    <div class="progress mb-3"  style="width: 70%;">
-                      <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="col-12 offset-3">
+                    <h6>Express JS</h6>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <p>Express JS</p>
-                    <div class="progress mb-3" style="width: 70%;">
-                      <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    <h6>JavaScript</h6>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <p>HTML | CSS</p>
-                    <div class="progress mb-3" style="width: 70%;">
-                      <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    <h6>C++</h6>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <p>C++</p>
-                    <div class="progress mb-3" style="width: 70%;">
-                      <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    <h6>HTML5</h6>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 65%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                   </div>
-                  <div class="col-lg-6 col-sm-12">
-                    <p>Git/Github</p>
-                    <div class="progress mb-3"  style="width: 70%;">
-                      <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <p>Mongoose</p>
-                    <div class="progress mb-3" style="width: 70%;">
-                      <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <p>Bootstrap</p>
-                    <div class="progress mb-3" style="width: 70%;">
-                      <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <p>EJS</p>
-                    <div class="progress mb-3" style="width: 70%;">
-                      <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
+                  <div class="col-12 d-flex justify-content-around mt-3">
+                    <div class="SkillGrid">CSS</div>
+                    <div class="SkillGrid">Bootstrap 4/5</div>
+                    <div class="SkillGrid">MongoDB</div>
+                    <div class="SkillGrid">Mongoose</div>
+                    <div class="SkillGrid">MySQL</div>
+                    <div class="SkillGrid">Git/Github</div>
+                    <div class="SkillGrid">Firebase</div>
+                    <div class="SkillGrid">Arduino C++</div>
+                    <div class="SkillGrid">Plotly.js</div>
+                    <div class="SkillGrid">Heroku</div>
+                    <div class="SkillGrid">Passport.js</div>
                   </div>
                 </div>
             </div>
@@ -197,12 +192,17 @@
             </div>
           </div>
           <div class="col-lg-10 col-sm-12 pl-0 mt-4">
-            <p class="text-right">Microsoft Learn Student Ambassador</p>
-            <p class="text-right"> I have been a part of the MLSA community for over an year. I have attended over 25 events and hosted them as well. These include Microsft Student Ambassador Summit, Imagine Cup, Microsoft Ignite.</p>
+            <p class="text-right">SWE Intern at JP Morgan</p>
+            <p class="text-right"> I am an upcoming intern at JP Morgan Chase and Co. I bagged this internship through their
+              yearly hackathon "Code for Good", competing with almost 500 students from all over India.
+            </p>
           </div>
           <div class="col-lg-10 col-sm-12 pr-0">
-            <p>Microsoft Learn Student Ambassador</p>
-            <p> I have been a part of the MLSA community for over an year. I have attended over 25 events and hosted them as well. These include Microsft Student Ambassador Summit, Imagine Cup, Microsoft Ignite.</p>
+            <p>PRISM Student Developer</p>
+            <p>As a part of Samsung PRISM Phase 2 - VIT Chennai,
+              I am actively working on a ML based project with my teachers and Samsung mentors.
+              PRISM is a 6-month long reseach and implementation program by Samsung to help students to work
+              with professional mentors from Samsung and use cutting edge technologies.</p>
           </div>
           <div class="col-lg-2 col-md-12 px-0"> 
             <div class="d-flex flex-row">
@@ -215,13 +215,16 @@
           <div class="col-lg-2 col-md-12 px-0"> 
             <div class="d-flex flex-row">
                 <div class="col-12 d-flex justify-content-start align-items-start">
-                    <div class="image1 mic"></div>
+                    <div class="image2 mic"></div>
                 </div>
             </div>
           </div>
           <div class="col-lg-10 col-sm-12 pl-0 mt-4">
-            <p class="text-right">Microsoft Learn Student Ambassador</p>
-            <p class="text-right"> I have been a part of the MLSA community for over an year. I have attended over 25 events and hosted them as well. These include Microsft Student Ambassador Summit, Imagine Cup, Microsoft Ignite.</p>
+            <p class="text-right">Management Lead - Microsoft Innovations Club, VIT Chennai</p>
+            <p class="text-right"> I initiated a technical club on our campus wherein I act as a Club Lead.  
+              Due to the past year's calamities, the community is on an online platform, yet we attempt 
+              to bring students together and act as a way to provide value to them even in remote locations. 
+              Ideally, we conversate on technology and management.</p>
           </div>
         </div>
     </div>
